Exe installers have wrong properties

XMLWordPrintable

    • b21
    • generic
    • windows

      The EXE installer details has no information about the actual application
      it will install.
      File version: 14.0.0
      Product Name OpenJDK Platform 14
      Product version: 14
      This is not quite right, since the application was built with Java 11, only
      packaged with jpackage from Java 14.
      Should it not use the name and app version supplied to jpackage on these
      properties.

      Original filename: msiwrapper.msi.
      It should be the name supplied to jpackage used here at least >
      applicationName.msi

            Assignee:
            Alexey Semenyuk
            Reporter:
            Alexey Semenyuk
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: