8236129: Exe installers have wrong properties

Reviewed-by: herrick, almatvee